Added system flow diagram and updated HTML/JS files

--- a/static/predict.html
+++ b/static/predict.html
@@ -19,7 +19,7 @@
     </ul>
   </nav>
 
-  <header class="hero">
+  <header class="hero tight">
     <h1>Health Predictor</h1>
     <p>Select symptoms and get probable conditions with guidance.</p>
   </header>
