--- a/static/index.html
+++ b/static/index.html
@@ -116,29 +116,21 @@
     </div>
   </section>
 
-  <!-- Stats Section -->
-  <section class="stats">
-    <div class="container">
-      <div class="stats-grid">
-        <div class="stat-item">
-          <div class="stat-number" data-target="10000">0</div>
-          <div class="stat-label">Users Served</div>
-        </div>
-        <div class="stat-item">
-          <div class="stat-number" data-target="95">0</div>
-          <div class="stat-label">Accuracy Rate</div>
-        </div>
-        <div class="stat-item">
-          <div class="stat-number" data-target="24">0</div>
-          <div class="stat-label">Hours Support</div>
-        </div>
-        <div class="stat-item">
-          <div class="stat-number" data-target="50">0</div>
-          <div class="stat-label">Diseases Covered</div>
+    <!-- Stats Section -->
+    <section class="stats">
+      <div class="container">
+        <div class="stats-grid">
+          <div class="stat-item">
+            <div class="stat-number" data-target="95">0</div>
+            <div class="stat-label">Disease Accuracy</div>
+          </div>
+          <div class="stat-item">
+            <div class="stat-number" data-target="50">0</div>
+            <div class="stat-label">Symptoms Covered</div>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
   <!-- CTA Section -->
   <section class="cta-section">
