chore: initial commit for Multi-Disease-Predictor-Health-Tracking

--- a/static/index.html
+++ b/static/index.html
@@ -46,6 +46,7 @@
           <span class="gradient-text">Prediction & Tracking</span>
           <span class="gradient-text">System</span>
         </h1>
+        <p id="user-greeting" class="hero-subtitle" style="margin-top: 0.5rem;"></p>
         <p class="hero-subtitle">
           Advanced AI-powered healthcare solutions for early disease detection and comprehensive health monitoring.
         </p>
@@ -184,7 +185,7 @@
     </div>
   </footer>
 
-  <script src="/static/app.js"></script>
+  <script src="/static/app.js?v=2"></script>
 </body>
 </html>
 
