--- a/static/about.html
+++ b/static/about.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HealthPredict • About Us</title>
+  <script src="/static/theme-init.js"></script>
   <link rel="stylesheet" href="/static/styles.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -30,6 +31,9 @@
           <i class="fas fa-user-plus"></i>
           Register
         </a>
+        <button class="theme-toggle" type="button" aria-label="Toggle color mode">
+          <i class="fas fa-moon"></i>
+        </button>
       </div>
       <div class="mobile-menu-toggle">
         <i class="fas fa-bars"></i>
